--- a/src/pages/applications/internal/leadership.astro
+++ b/src/pages/applications/internal/leadership.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import FormStatus from '../../components/applications/FormStatus.astro';
+import ApplicationLayout from '../../../layouts/ApplicationLayout.astro';
+import FormStatus from '../../../components/applications/FormStatus.astro';
 
 const formId = 'leadership-support-form';
 ---
 
-<Layout title="Leadership Support Application">
+<ApplicationLayout title="Leadership Support Application">
   <main class="container mx-auto px-4 py-8">
     <div class="max-w-2xl mx-auto">
       <div class="mb-6">
@@ -274,4 +274,4 @@ const formId = 'leadership-support-form';
       </div>
     </div>
   </main>
-</Layout>
+</ApplicationLayout>
