--- a/src/pages/news/index.astro
+++ b/src/pages/news/index.astro
@@ -17,7 +17,7 @@ const successStories = sortedNews.filter(item => item.data.category === 'success
 const featuredNews = sortedNews.filter(item => item.data.featured);
 ---
 
-<Layout title="News & Updates | Dzaleka Heritage">
+<Layout title="News & Updates">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
     <PageHeader
       title="News & Updates"
