--- a/src/pages/resources/submit/thank-you.astro
+++ b/src/pages/resources/submit/thank-you.astro
@@ -2,7 +2,7 @@
 import Layout from '../../../layouts/Layout.astro';
 ---
 
-<Layout title="Thank You - Resource Submitted | Dzaleka Heritage Archive">
+<Layout title="Thank You - Resource Submitted">
   <main class="min-h-screen bg-gray-50 py-16 px-4 sm:px-6 lg:px-8">
     <div class="max-w-2xl mx-auto text-center">
       <div class="bg-white rounded-xl shadow-sm border border-gray-200 p-8 md:p-12">
