--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -14,8 +14,7 @@ const navigation = [
     <div class="flex items-center justify-between">
       <div class="flex items-center gap-8">
         <a href="/" class="flex items-center">
-          <img src="/images/logo.png" alt="Dzaleka Heritage Archive" class="h-8 w-auto" />
-          <span class="ml-2 text-xl font-semibold text-gray-900">Dzaleka Heritage</span>
+          <span class="text-xl font-semibold text-gray-900">Dzaleka Online Services</span>
         </a>
         
         <div class="hidden md:flex items-center gap-6">
