--- a/src/pages/resources/submit.astro
+++ b/src/pages/resources/submit.astro
@@ -2,7 +2,7 @@
 import Layout from '../../layouts/Layout.astro';
 ---
 
-<Layout title="Submit a Resource | Dzaleka Online Service">
+<Layout title="Submit a Resource">
   <main class="container mx-auto px-4 py-8">
     {/* Hero Section */}
     <div class="max-w-2xl mx-auto mb-12">
