--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -44,7 +44,7 @@ const popularSearches = [
 ];
 ---
 
-<Layout title="Search Dzaleka Heritage Archive">
+<Layout title="Search">
   <main class="container mx-auto px-4 py-8">
     <div class="max-w-3xl mx-auto">
       <div class="text-center mb-8">
