--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Terms and Conditions | Dzaleka Online Service">
+<Layout title="Terms and Conditions">
   <main class="min-h-screen bg-gray-50">
     {/* Hero Section */}
     <div class="bg-gradient-to-br from-primary-600 to-primary-800 py-16">
